--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["react","stage-0"],
-  "plugins": ["transform-decorators-legacy"]
+  "presets": ["react", "stage-0", "env"],
+  "plugins": ["transform-decorators-legacy", "transform-class-properties"]
 }
