--- a/package.json
+++ b/package.json
@@ -19,17 +19,20 @@
   },
   "homepage": "https://github.com/132yse/minx#readme",
   "devDependencies": {
+    "@types/react": "^16.4.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "create-react-context": "^0.2.2",
     "parcel-bundler": "^1.7.0"
   },
   "dependencies": {
-    "react": "^16.3.0",
+    "react": "^16.4.1",
     "react-dom": "^16.3.0",
     "smox": "^1.1.5",
+    "typescript": "^2.9.2",
     "unstated": "^2.1.1"
   }
 }
