--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/132yse/minx#readme",
   "devDependencies": {
-    "@types/react": "^16.4.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.7.0",
@@ -29,10 +28,10 @@
     "parcel-bundler": "^1.7.0"
   },
   "dependencies": {
+    "immer": "^1.3.1",
     "react": "^16.4.1",
-    "react-dom": "^16.3.0",
+    "react-dom": "^16.4.1",
     "smox": "^1.1.5",
-    "typescript": "^2.9.2",
-    "unstated": "^2.1.1"
+    "typescript": "^2.9.2"
   }
 }
