--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "parcel-bundler": "^1.7.0"
   },
   "dependencies": {
-    "immer": "^1.3.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "smox": "^1.1.5",
-    "typescript": "^2.9.2"
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0",
+    "smox": "^1.3.3"
   }
 }
